# routes/product.router.js
@@ -7,10 +7,10 @@ const router = express.Router();
 
 router.post("/", authenticate, authorize(ROLE.ADMIN), ctrl.createProduct);
 
-router.put("/:id", authorize(ROLE.ADMIN, ROLE.MANAGER), ctrl.updateProduct);
+router.put("/:id", authenticate, authorize(ROLE.ADMIN, ROLE.MANAGER), ctrl.updateProduct);
 router.get("/", ctrl.getProducts);
 router.get("/:id", ctrl.getProductById);
 
-router.delete("/:id", authorize(ROLE.ADMIN), ctrl.deleteProduct);
+router.delete("/:id", authenticate, authorize(ROLE.ADMIN), ctrl.deleteProduct);
 
 module.exports = router;
